:construction: feat: iniciando CRUD de estadio e partidas && refatorando codigo